# esp-data-streamer

./: .gitignore  CMakeLists.txt  NOTICE  README.md  sdkconfig.defaults
.devcontainer/idf_v5_4/: devcontainer.json
ca_scripts/: README.md  create_CAs.sh  create_client_key.sh  create_server_key.sh  intermediate-openssl-template.cnf  root-openssl-template.cnf
components/data_streamer/: CMakeLists.txt  Kconfig  README.md
components/data_streamer/include/: concepts.h  config.h  server_ops.h  streamer.h  vfs_streamer.h
components/data_streamer/test-host/: CMakeLists.txt  test_config.h.in  test_streamer.cpp  test_vfs_streamer.cpp
components/data_streamer/test-host/stubs/: esp_err.h  esp_http_server.h  esp_log.h  http_parser.h  sdkconfig.h
docker/: Dockerfile
main/: CMakeLists.txt  Kconfig.projbuild  data_streamer_example_main.cpp  idf_component.yml
main/certs/: server.crt  server.key
python/data-streamer/: README.md  client.py  pyproject.toml
python/data-streamer/certs/: ca.crt  client.crt  client.key
