[project]
name = "data-streamer"
version = "0.0.1"
description = "Python client for data streamer in example project of data-streamer component"
authors = [
    {name = "Giovanni",email = "giovanni@fold.ai"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "zeroconf (>=0.144.1,<0.145.0)",
    "click (>=8.1.8,<9.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
